--- a/templates/index.html
+++ b/templates/index.html
@@ -40,6 +40,7 @@
             alt="Responsive image"
           />
         </div>
+
         <div class="col-md-4">
           <!-- Mars Facts -->
           <div class="row" id="mars-facts">
@@ -48,6 +49,26 @@
           </div>
         </div>
       </div>
+
+      <!-- Mars Hemispheres-->
+      <div class="row" id="mars-hemispheres">
+        <div class="page-header">
+          <h2 class="text-center">Mars Hemispheres</h2>
+        </div>
+
+        {% for hemisphere in mars.hemispheres %}
+        <div class="col-md-6">
+          <div class="thumbnail">
+            <img src="{{hemisphere.img_url | default('static/images/error.png', true)}}" alt="Responsive image" class="img-responsive" >
+            <div class="caption">
+              <h3>{{hemisphere.title}}</h3>
+            </div>
+          </div>
+          
+        </div>
+        {% endfor %}
+      </div>
+
     </div>
   </body>
 </html>
