--- a/templates/index.html
+++ b/templates/index.html
@@ -11,13 +11,23 @@
     />
   </head>
   <body>
+    <!-- Add Jumbotron to Header -->
+    <div class="jumbotron text-center">
+        <div class="container">
+            <span class="glyphicon glyphicon-star" aria-hidden="true"></span><h1> Mission to Mars</h1> 
+            <p><a class="btn btn-success btn-sm" href="/scrape" role="button">Scrape New Data</a></p>  
+        </div>
+    </div>
     <div class="container">
-      <!-- Add Jumbotron to Header -->
+      <!-- Add Jumbotron to Header
       <div class="jumbotron text-center">
         <h1>Mission to Mars</h1>
-        <!-- Add a button to activate scraping script -->
-        <p><a class="btn btn-primary btn-lg" href="/scrape" role="button">Scrape New Data</a></p>
+
+        Add a button to activate scraping script
+        <p><a class="btn btn-success btn-sm" href="/scrape" role="button">Scrape New Data</a></p>
       </div>
+
+      -->
       <!-- Add section for Mars News -->
       <div class="row" id="mars-news">
         <div class="col-md-12">
